docs: sync all documentation with actual project state
- design-decisions.md: fill all 'pending' entries with actual decisions
- meetings/2026-02-25-kickoff.md: mark all tasks complete, update status
- agent-workflow.md: rewrite to reflect parallel agent meetings + real examples
- component-guide.md: add Activity Graph + Contribution Snake sections
- README.md: fix accent color #00b4d8 -> #58a6ff, fix git.io links
- CONTRIBUTING.md: fix clone URL (njueeray -> OpenProfile)
- .gitignore: exclude local reference docs

--- a/docs/meetings/2026-02-25-kickoff.md
+++ b/docs/meetings/2026-02-25-kickoff.md
@@ -3,7 +3,7 @@
 **日期：** 2026-02-25  
 **参会角色：** profile-designer · researcher · content-writer · qa-reviewer  
 **主持：** GitHub Copilot（代理协调）  
-**状态：** ✅ 决议已通过，执行中
+**状态：** ✅ 全部决议已执行完毕
 
 ---
 
@@ -47,14 +47,14 @@
 
 | 仓库 | 定位 | 技术栈 | 更新频率 |
 |------|------|--------|---------|
-| `njueeRay/njueeRay` | GitHub Profile 入口 | Markdown | 低频 |
+| `njueeRay/njueeRay` | GitHub Profile 入口 | Markdown + GitHub Actions | 低频（自动化更新） |
 | `njueeRay/OpenProfile` | 教学模板+Agent配置 | Markdown + YAML | 中频 |
-| `njueeRay/njueeray.github.io` | 个人简历主站 | Astro + TypeScript | 中频 |
+| `njueeRay/njueeray.github.io` | 个人简历主站 | Astro 4.x + TypeScript | 中频 |
 
 ### 技术栈决议
 
-- **简历站**：Astro + TypeScript → 静态导出 → GitHub Pages
-- **主题方向**：暗色终端美学，从 Astro 主题生态中选起点定制
+- **简历站**：Astro 4.16.18 + TypeScript → 静态导出 → GitHub Pages（5.x 有 ohash 依赖问题，锁定 4.x）
+- **主题方向**：暗色终端美学，统一强调色 `#58a6ff`
 
 ### 执行阶段
 
@@ -64,24 +64,20 @@
 | 2 | 初始化 OpenProfile 目录结构，推送首个 commit | content-writer | ✅ 完成 |
 | 3 | 初始化 Astro 个人主站骨架（暗色终端风）| content-writer | ✅ 完成 |
 | 4 | 推送两个仓库到 GitHub | content-writer | ✅ 完成 |
-| 5 | 启用 GitHub Pages（Source: GitHub Actions）| 用户操作 | ⏸️ 待用户操作 |
-| 6 | 设计 njueeray.github.io 视觉深度迭代 | profile-designer | ⏸️ 待开始 |
-| 7 | 创建 njueeRay/njueeRay Profile README | content-writer | ⏸️ 待开始 |
+| 5 | 启用 GitHub Pages（Source: GitHub Actions）| 用户操作 | ✅ 完成 |
+| 6 | 创建 njueeRay/njueeRay Profile README | content-writer | ✅ 完成 |
+| 7 | 接入 WakaTime + Activity Graph + 贡献蛇 | content-writer | ✅ 完成 |
+| 8 | 统一 Stats/Streak 主题 + 全链路强调色对齐 | profile-designer | ✅ 完成 |
+| 9 | About/Projects 区块内容落地 | content-writer | ✅ 完成 |
 
 ---
 
 ## 用户待办事项
 
-会议确认用户需要完成以下操作（Agent 无法代劳）：
-
 - [x] 确认执行（2026-02-25）
-- [ ] 安装 GitHub CLI：`winget install --id GitHub.cli` → `gh auth login`
-- [ ] 确认 Node.js 18+ 已安装（Astro 依赖）
-- [ ] 完成两个仓库创建后，在 GitHub Pages 设置中启用部署
-
----
-
-## 下次会议预计议题
-
-- OpenProfile README 首版内容审查
-- njueeray.github.io 视觉方案确认
+- [x] 创建 njueeRay/njueeRay 仓库
+- [x] 启用 GitHub Pages（Settings → Pages → GitHub Actions）
+- [x] 注册 WakaTime 并安装编辑器插件
+- [x] 添加 Secrets：`WAKATIME_API_KEY` + `GH_TOKEN`
+- [x] 启用 Actions 写权限（Workflow permissions → Read and write）
+- [x] 触发贡献蛇 Action 并确认生成
