docs(playbook): add 12 onboarding protocol + 13 team self-evolution
Two new sections based on user's enterprise-level team management model:

12 New Team Onboarding Protocol (4 phases):
- Phase 1: Silent Reading  each agent reads independently by role focus
- Phase 2: Alignment Meeting  Brain-led, fixed agenda, full team
- Phase 3: Project Assessment Report  structured output to user
- Phase 4: Team Adaptation Decision  triggers 13 if needed
- Includes: per-role reading checklist, private notes template,
  meeting minutes template, status report template

13 Team Self-Evolution:
- Brain as team architect: recruit / modify / retire agents autonomously
- Brain as sole owner of copilot-instructions.md:
  3 fixed operation triggers (onboarding / iteration close / team change)
- New agent file minimum structure spec
- Agent modification steps with escalation gate
- Evolution Log table format (date / type / role / summary / reason)

copilot-instructions.md:
- Added 3 new Brain autonomous actions (recruit, modify, own file)
- Added 'must notify user' item for capability reduction
- Added Team Evolution Log section with V2.0 history backfilled

--- a/docs/meetings/2026-02-25-kickoff.md
+++ b/docs/meetings/2026-02-25-kickoff.md
@@ -1,7 +1,7 @@
 # 团队会议纪要 #001 — 项目架构启动会
 
 **日期：** 2026-02-25  
-**参会角色：** profile-designer · researcher · content-writer · qa-reviewer  
+**参会角色：** profile-designer · researcher · dev · code-reviewer  
 **主持：** GitHub Copilot（代理协调）  
 **状态：** ✅ 全部决议已执行完毕
 
@@ -22,9 +22,9 @@
 
 **researcher：** 简历站技术选型 Astro + TypeScript。理由：TS 原生友好；静态导出直推 GitHub Pages 零运维成本（不依赖 Vercel）；有现成暗色终端风主题；相比 Hugo/Jekyll 对 TS 开发者更自然。
 
-**content-writer：** OpenProfile 的 README 叙事主角是"这套 AI 工作流"，首屏应为「这是 njueeRay 实际在用的主页配置，用 AI Agent 构建」，badge 链接直通 njueeray.github.io。
+**dev：** OpenProfile 的 README 叙事主角是"这套 AI 工作流"，首屏应为「这是 njueeRay 实际在用的主页配置，用 AI Agent 构建」，badge 链接直通 njueeray.github.io。
 
-**qa-reviewer：** 单一信息源原则——个人信息只在 OpenProfile 的配置文件中维护，其他仓库通过动态引用获取，避免三处维护分裂。
+**code-reviewer：** 单一信息源原则——个人信息只在 OpenProfile 的配置文件中维护，其他仓库通过动态引用获取，避免三处维护分裂。
 
 ---
 
@@ -60,15 +60,15 @@
 
 | 顺序 | 任务 | 负责 Agent | 状态 |
 |------|------|-----------|------|
-| 1 | 创建 OpenProfile 和 njueeray.github.io GitHub 仓库 | content-writer | ✅ 完成 |
-| 2 | 初始化 OpenProfile 目录结构，推送首个 commit | content-writer | ✅ 完成 |
-| 3 | 初始化 Astro 个人主站骨架（暗色终端风）| content-writer | ✅ 完成 |
-| 4 | 推送两个仓库到 GitHub | content-writer | ✅ 完成 |
+| 1 | 创建 OpenProfile 和 njueeray.github.io GitHub 仓库 | dev | ✅ 完成 |
+| 2 | 初始化 OpenProfile 目录结构，推送首个 commit | dev | ✅ 完成 |
+| 3 | 初始化 Astro 个人主站骨架（暗色终端风）| dev | ✅ 完成 |
+| 4 | 推送两个仓库到 GitHub | dev | ✅ 完成 |
 | 5 | 启用 GitHub Pages（Source: GitHub Actions）| 用户操作 | ✅ 完成 |
-| 6 | 创建 njueeRay/njueeRay Profile README | content-writer | ✅ 完成 |
-| 7 | 接入 WakaTime + Activity Graph + 贡献蛇 | content-writer | ✅ 完成 |
+| 6 | 创建 njueeRay/njueeRay Profile README | dev | ✅ 完成 |
+| 7 | 接入 WakaTime + Activity Graph + 贡献蛇 | dev | ✅ 完成 |
 | 8 | 统一 Stats/Streak 主题 + 全链路强调色对齐 | profile-designer | ✅ 完成 |
-| 9 | About/Projects 区块内容落地 | content-writer | ✅ 完成 |
+| 9 | About/Projects 区块内容落地 | dev | ✅ 完成 |
 
 ---
 
