--- a/docs/meetings/2026-02-25-v2-planning.md
+++ b/docs/meetings/2026-02-25-v2-planning.md
@@ -1,7 +1,7 @@
 # V2.0 规划会议纪要
 
 **日期：** 2026-02-25  
-**参与者：** profile-designer · content-writer · researcher · qa-reviewer  
+**参与者：** profile-designer · dev · researcher · code-reviewer  
 **会议模式：** 并行全体会议  
 **状态：** ✅ 决议已形成，待执行
 
@@ -125,7 +125,7 @@
 | QG-2 | 版本发布 | v1.0.0 Tag + Release 已打 |
 | QG-3 | 指令文件同步 | copilot-instructions.md 零过期信息 |
 | QG-4 | DoD Checklist | 每次迭代收尾逐条确认 |
-| QG-5 | 审查关卡 | 推送前经过 qa-reviewer 审查 |
+| QG-5 | 审查关卡 | 推送前经过 code-reviewer 审查 |
 | QG-6 | 浅色主题兼容 | 所有组件 `<picture>` 双版本 |
 | QG-7 | 联系方式可达 | Profile README 包含 ≥1 种可点击联系方式 |
 | QG-8 | WakaTime 降级 | 数据为空时有 fallback 显示 |
@@ -154,9 +154,9 @@
 |------|---------|------|
 | DoD Checklist | 写入 copilot-instructions.md，每次迭代收尾逐条打勾 | ✅ 已完成 |
 | CI 自动拦截 | link-check + markdown-lint Actions | Phase D 执行 |
-| 审查关卡 | 每次内容变更后调用 qa-reviewer 验收 | V2.0 起执行 |
+| 审查关卡 | 每次内容变更后调用 code-reviewer 验收 | V2.0 起执行 |
 | 文档铁律 | "文档跟随开发"已写入 agent-workflow.md | ✅ 已完成 |
-| Content-Writer SOP | 6 步标准流程（RECEIVE → AUDIT → IMPLEMENT → DOCUMENT → REVIEW → MERGE） | V2.0 起执行 |
+| dev SOP | 6 步标准流程（RECEIVE → AUDIT → IMPLEMENT → DOCUMENT → REVIEW → MERGE） | V2.0 起执行 |
 
 ---
 
